; ModuleID = '/home/carl/AnghaBench/libgit2/tests/index/extr_filemodes.c_test_index_filemodes__invalid.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/index/extr_filemodes.c_test_index_filemodes__invalid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i8*, i32, i32 }

@g_repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"./filemodes/dummy-file.txt\00", align 1
@.str.1 = private unnamed_addr constant [10 x i8] c"new-file\0A\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"dummy-file.txt\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"foo\00", align 1
@GIT_OBJECT_BLOB = common dso_local global i32 0, align 4
@GIT_FILEMODE_BLOB = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_index_filemodes__invalid() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca %struct.TYPE_6__, align 8
  %3 = alloca %struct.TYPE_6__*, align 8
  %4 = load i32, i32* @g_repo, align 4
  %5 = call i32 @git_repository_index(i32** %1, i32 %4)
  %6 = call i32 @cl_git_pass(i32 %5)
  %7 = call i32 @cl_git_mkfile(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0))
  %8 = load i32*, i32** %1, align 8
  %9 = call i32 @git_index_add_bypath(i32* %8, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0))
  %10 = call i32 @cl_git_pass(i32 %9)
  %11 = load i32*, i32** %1, align 8
  %12 = call %struct.TYPE_6__* @git_index_get_bypath(i32* %11, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0), i32 0)
  store %struct.TYPE_6__* %12, %struct.TYPE_6__** %3, align 8
  %13 = call i32 @cl_assert(%struct.TYPE_6__* %12)
  %14 = call i32 @GIT_INDEX_ENTRY_STAGE_SET(%struct.TYPE_6__* %2, i32 0)
  %15 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %2, i32 0, i32 0
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0), i8** %15, align 8
  %16 = load i32, i32* @GIT_OBJECT_BLOB, align 4
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %2, i32 0, i32 1
  store i32 %16, i32* %17, align 8
  %18 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %2, i32 0, i32 2
  %19 = load %struct.TYPE_6__*, %struct.TYPE_6__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 2
  %21 = call i32 @git_oid_cpy(i32* %18, i32* %20)
  %22 = load i32*, i32** %1, align 8
  %23 = call i32 @git_index_add(i32* %22, %struct.TYPE_6__* %2)
  %24 = call i32 @cl_git_fail(i32 %23)
  %25 = load i32, i32* @GIT_FILEMODE_BLOB, align 4
  %26 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %2, i32 0, i32 1
  store i32 %25, i32* %26, align 8
  %27 = load i32*, i32** %1, align 8
  %28 = call i32 @git_index_add(i32* %27, %struct.TYPE_6__* %2)
  %29 = call i32 @cl_git_pass(i32 %28)
  %30 = load i32*, i32** %1, align 8
  %31 = call i32 @git_index_free(i32* %30)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_index(i32**, i32) #1

declare dso_local i32 @cl_git_mkfile(i8*, i8*) #1

declare dso_local i32 @git_index_add_bypath(i32*, i8*) #1

declare dso_local i32 @cl_assert(%struct.TYPE_6__*) #1

declare dso_local %struct.TYPE_6__* @git_index_get_bypath(i32*, i8*, i32) #1

declare dso_local i32 @GIT_INDEX_ENTRY_STAGE_SET(%struct.TYPE_6__*, i32) #1

declare dso_local i32 @git_oid_cpy(i32*, i32*) #1

declare dso_local i32 @cl_git_fail(i32) #1

declare dso_local i32 @git_index_add(i32*, %struct.TYPE_6__*) #1

declare dso_local i32 @git_index_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
